Fixed copy button padding on small devices

--- a/src/components/CertificateShareLink/sharing.scss
+++ b/src/components/CertificateShareLink/sharing.scss
@@ -17,7 +17,7 @@
   font-weight: 400;
   text-align: center;
   vertical-align: middle;
-  padding: 0.3rem 2rem;
+  padding: 0.3rem auto;
   background-color: $brand-dark;
   border: none;
   border-radius: 0 6px 6px 0;
